# tiny_robot_control

./: .gitignore  CLAUDE.md  env.xml  env_config_1416a.xml  env_from_camera.xml  pyproject.toml
config/: controller.yaml  objects.yaml  push_objects.yaml  real.yaml
docs/: PUSH_GEOMETRY.md
scripts/: capture_to_xml.py  generate_aruco_markers.py  test_approach_visual.py  test_autonomous.py  test_autonomous_real.py  test_camera.py  test_control.py  test_gui.py  test_interactive.py  test_mask_generation.py  test_navigation.py  test_pubsub.py  test_push.py  test_real_navigation.py  test_robot.py  test_xml_generation.py
src/robot_control/: ARCHITECTURE.md  TODO.md  __init__.py  coordinator.py  executor.py  runtime.py
src/robot_control/assets/: __init__.py
src/robot_control/camera/: __init__.py  observer.py  workspace.py
src/robot_control/controller/: __init__.py  base.py  config.py  edge_points.py  follow_path.py  keyboard.py  navigation.py  push.py
src/robot_control/core/: __init__.py  object_defs.py  topics.py  types.py  world_state.py
src/robot_control/environment/: __init__.py  action_sender.py  base.py  micromvp_adapter.py  real.py  sim.py
src/robot_control/gui/: __init__.py  canvas.py  settings_panel.py  sidebar.py  window.py
src/robot_control/nodes/: __init__.py  camera_sensor.py  sim_sensor.py
src/robot_control/planner/: __init__.py  base.py  rvg_planner.py  sequence_planner.py
src/robot_control/utils/: __init__.py  camera_recorder.py  wavefront.py  xml_generator.py
